--- a/.github/workflows/build_and_test.yaml
+++ b/.github/workflows/build_and_test.yaml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Node.js CI
+name: Podcat Core CI/CD
 
 on:
   push:
@@ -10,24 +10,35 @@ on:
     branches: [ main, next ]
 
 jobs:
-  build:
+  format-build-test:
 
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
         node-version: [16.x, 17.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'yarn'
-    - run: yarn
-    - run: yarn format
-    - run: yarn lint
-    - run: yarn build
-    - run: yarn test
+      - name: Checkout code
+        uses: actions/checkout@v3
+      
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'yarn'
+      
+      - name: Install dependencies
+        run: yarn
+      
+      - name: Format code
+        run: yarn format
+      
+      - name: Lint code
+        run: yarn lint
+      
+      - Build
+        run: yarn build
+      
+      - Test
+        run: yarn test
