Adding step names

--- a/.github/workflows/build_and_test.yaml
+++ b/.github/workflows/build_and_test.yaml
@@ -37,8 +37,8 @@ jobs:
       - name: Lint code
         run: yarn lint
       
-      - Build
+      - name: Build
         run: yarn build
       
-      - Test
+      - name: Test
         run: yarn test
